--- a/index.html
+++ b/index.html
@@ -77,7 +77,37 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-content">
+                <h3 class="footer-heading">Geekfolio</h3>
+                <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Nisi, unde!</p>
+            </div>
+            <div class="footer-content">
+                <h4 class="footer-heading">Useful Links</h4>
+                <li>About Us</li>
+                <li>Careers</li>
+                <li>News & Articles</li>
+                <li>Legal Notice</li>
+            </div>
+            <div class="footer-content">
+                <h4 class="footer-heading">Supports</h4>
+                <li>Help Center</li>
+                <li>Contact Us</li>
+                <li>FAQ</li>
+                <li>Parent Community</li>
+            </div>
+            <div class="footer-content">
+                <h4 class="footer-heading">Contact Information</h4>
+                 <li>Feel free to contact us!!</li>
+                 <li>3557 Derek Drive,Orlando,Florida</li>
+                 <li>+1456657-887</li>
+                 <li>info@domain.com</li>
+            </div>
+        </div>
+        <hr>
+        <p class="copy">
+            <small>Copyright &copy; 2022 Agence. All rights reserved.</small>
+          </p>
     </footer>
 </body>
 </html>
